Reorganize package structure and add CLI entry point.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,13 @@
 name = "protoc-gen-py-mcp"
 version = "0.0.1"
 description = "Build MCP servers from proto files"
-readme = "README.md"
 requires-python = ">=3.10"
+readme = "README.md"
+license = "Apache-2.0"
 dependencies = [
     "fastmcp>=2.3.1",
     "protobuf>=6.30.2",
 ]
+
+[project.scripts]
+protoc-gen-py-mcp = "protoc_gen_py_mcp.cli.cli:app"
